# Rektrace

./: .clang-format  .clang-tidy  .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  .nvmrc  .roomodes  .wsl_launcher.txt  API.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONFIG.md  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  Makefile  OPENING_PROMPT_FOR_GPT5.md  OPERATIONS.md  PRELAUNCH.md  README.md  README_PRELAUNCH.md  REKTRACE_INK_PRD.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_EVIDENCE_TABLE.md  TELEGRAM.md  canary.out  canary_metrics.json  canary_report.json  canary_status.json  diff-plan.md  docker-compose.example.yml  docker-compose.yml  download_nvm.ps1  ecosystem.config.cjs  (+23 more)
.cursor/: mcp.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
C:Userspette/: .profile
archive/: README.md
cpp_demo/: CMakeLists.txt
cpp_demo/src/: bench.cpp  main.cpp  score.cpp
cpp_demo/src/lib/: hello.cpp  hello.hpp
cpp_demo/tests/: test_basic.cpp  test_hello.cpp
db/: schema.sql
docs/: AUDIT.md  CONFIG.md  INTEGRATED_RESEARCH_REPORT.md  MAINTENANCE_AND_FREEZE.md  OPERATIONS.md  README.md  REPO_MAP.md  SIGNALS.md  TODO-LAUNCH.md  architecture.mmd  data_contracts.md  data_invariants.md  flags.md  flow_alerts.mmd  quickstart-windows.md  red_team_playbook.md  release.md  rfc-tsconfig-dedup.md  signal_flow.md  timeouts_jitter.md
ops/: allowlist.example.txt  backup_ops.sh  drill_freeze.sh  final_go_live.sh  flip_rules.sh  flip_signals.sh  gen_env_live.sh  go_live.sh  nginx.example.conf  pm2_reload.sh  pm2_start.sh  rehearse_launch.sh  rektrace pat.txt  restore_ops.sh  rollback_last.sh  safe_mode.sh  secrets.local.example.json  secrets.local.json2.txt  tie_the_bag.sh  upsert_kv.mjs  watch_post_launch.sh
preview/: messages.html
prometheus/: prometheus.yml
rektrace-cursor-mcp-pack/: Justfile  README.md  package.json  tsconfig.base.json
rektrace-rugscan/: README.md  tsconfig.json
release/: README.md
scripts/: alerts_watch.sh  audit_pack.sh  baseline_perf.sh  canary.sh  canary_live.sh  chaos_smoke.sh  config_snapshot.sh  demo_kick_wait.sh  deploy_live.sh  dev.sh  env_audit.ps1  env_bootstrap.cjs  env_lint.sh  force_sync_secrets.sh  fuzz_scan.sh  hammer.sh  health_probe.sh  index_docs.py  install_node20_portable.ps1  install_node20_system.ps1  log_scrub.sh  mcp_pm2_setup.sh  mcp_pm2_surgeon.sh  oracle_scan.sh  package_rugscan.sh  perf_gate.sh  pipeline_verify.sh  (+24 more)
(+202 files in other folders)
